force-app/main/default/objects/Apttus_PLI_Staging__c/Apttus_PLI_Staging__c.object-meta.xml
<CustomObject>
    <description>Obsolete object - will delete in 2021</description>
    <label>PLI Staging</label>
    <nameField>
        <label>PLI Staging</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLI Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>