force-app/main/default/objects/Apttus_PLI_Staging__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Customer # + Sales Area</description>
    <formula>CustomerId__c + &apos;_&apos; + SalesOrganization__c + DistributionChannel__c + Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>