force-app/main/default/objects/Apttus_PLI_Staging__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>Field to store the customer id</description>
    <label>CustomerId</label>
    <length>12</length>
    <type>Text</type>
</CustomField>