force-app/main/default/objects/Apttus_PLI_Staging__c/fields/CustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>CustomerPrice__c</fullName>
    <description>Field to store the customer price</description>
    <label>CustomerPrice</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>