force-app/main/default/objects/Apttus_PLI_Staging__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <description>Field to store the distribution channel</description>
    <label>DistributionChannel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>