force-app/main/default/objects/Apttus_PLI_Staging__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Field to store Division</description>
    <label>Division</label>
    <length>2</length>
    <type>Text</type>
</CustomField>