force-app/main/default/objects/Apttus_PLI_Staging__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <description>Field to store the list price</description>
    <label>ListPrice</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>