force-app/main/default/objects/Apttus_PLI_Staging__c/fields/MaterialId__c.field-meta.xml
<CustomField>
    <fullName>MaterialId__c</fullName>
    <description>Field to store the material id</description>
    <label>MaterialId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>