force-app/main/default/objects/Apttus_PLI_Staging__c/fields/PLI_Key__c.field-meta.xml
<CustomField>
    <fullName>PLI_Key__c</fullName>
    <description>Field to store the pli_key</description>
    <formula>Contract_Number__c + &apos;_&apos; + MaterialId__c + &apos;_&apos; + TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLI Key</label>
    <type>Text</type>
</CustomField>