force-app/main/default/objects/Apttus_PLI_Staging__c/fields/PriceListType__c.field-meta.xml
<CustomField>
    <fullName>PriceListType__c</fullName>
    <description>Field to store the price list type</description>
    <label>PriceListType</label>
    <length>2</length>
    <type>Text</type>
</CustomField>