force-app/main/default/objects/Apttus_PLI_Staging__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <description>Field to store the processed date</description>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>