force-app/main/default/objects/Apttus_PLI_Staging__c/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <description>Field to store the sales organization</description>
    <label>SalesOrganization</label>
    <length>4</length>
    <type>Text</type>
</CustomField>