force-app/main/default/objects/Apttus_PLI_Staging__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Field to store UOM</description>
    <label>UOM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>