force-app/main/default/objects/Apttus_PLI_Staging__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Field to store the valid from</description>
    <label>ValidFrom</label>
    <length>8</length>
    <type>Text</type>
</CustomField>