force-app/main/default/objects/Apttus_PLI_Staging__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Field to store the valid to</description>
    <label>ValidTo</label>
    <length>8</length>
    <type>Text</type>
</CustomField>